[gd_scene load_steps=5 format=2]

[ext_resource path="res://Project/Tscn/PrefabDoor.tscn" type="PackedScene" id=1]
[ext_resource path="res://Project/Art/GFX/PNG/Tiles/tile_463.png" type="Texture" id=2]
[ext_resource path="res://Project/Tscn/PrefabNumpad.tscn" type="PackedScene" id=3]
[ext_resource path="res://Project/Script/LockedDoor.gd" type="Script" id=4]

[node name="LockedDoor" instance=ExtResource( 1 )]
collision_mask = 1
script = ExtResource( 4 )

[node name="Sprite" parent="." index="1"]
texture = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="." index="3"]

[node name="NumpadCombination" parent="CanvasLayer" index="0" instance=ExtResource( 3 )]

[connection signal="body_exited" from="." to="." method="_on_docked_door_body_exited"]
[connection signal="combination_correct" from="CanvasLayer/NumpadCombination" to="." method="_on_numpad_combination_correct"]
